--- a/NexterChannel.html
+++ b/NexterChannel.html
@@ -1,6 +1,6 @@
 {
 "name": "Khun KamMEE Channel",
-"author": "[บ้านคูณคำมี แชนแนล <อัพเดท:26.11.2567:13.00>]",
+"author": "[บ้านคูณคำมี <อัพเดท:12.12.2567:13.00>]",
 "image": "https://raw.githubusercontent.com/Tonnexter/Tonnexter/refs/heads/KhunKamMee/Picture/KM-LOGO/1.png",
 "url": "https://raw.githubusercontent.com/Tonnexter/Tonnexter/KhunKamMee/NexterChannel.html",
 "info": "[บ้านคูณคำมี แชนแนล]",
@@ -109,7 +109,7 @@
 "name": "Nexter-GJK-IPTV-ALL",
 "author": "Nexter",
 "image": "https://raw.githubusercontent.com/Tonnexter/Tonnexter/59909a28a230b4902d15b0819d1646b74f1f5b2e/Picture/GJK1.png",
-"url": "https://pastebin.com/raw/uLW3GBJK",
+"url": "https://raw.githubusercontent.com/Tonnexter/Tonnexter/KhunKamMee/GJK-IPTV.html",
 "import": "true"
 },
 
