--- a/Nexter-All-ChanNEL.html
+++ b/Nexter-All-ChanNEL.html
@@ -3,7 +3,7 @@
 "author": "Nexter",
 "parental": "true",
 "image": "https://img.freepik.com/premium-vector/modern-abstract-letter-geometric-logo_1021316-63.jpg",
-"url": "",
+"url": "https://raw.githubusercontent.com/Tonnexter/Tonnexter/refs/heads/KhunKamMee/Nexter-All-ChanNEL.html",
 "info": "Nexter-All-Channel",
 
 
