--- a/NexterChannel.html
+++ b/NexterChannel.html
@@ -1,6 +1,6 @@
 {
 "name": "Khun KamMEE Channel",
-"author": "[บ้านคูณคำมี <อัพเดท:12.12.2567:12.00>]",
+"author": "[บ้านคูณคำมี <อัพเดท:12.12.2567:11.00>]",
 "image": "https://raw.githubusercontent.com/Tonnexter/Tonnexter/refs/heads/KhunKamMee/Picture/KM-LOGO/1.png",
 "url": "https://raw.githubusercontent.com/Tonnexter/Tonnexter/KhunKamMee/NexterChannel.html",
 "info": "[บ้านคูณคำมี แชนแนล]",
@@ -29,7 +29,6 @@
 
 
 
-
 {
 "name": "Nexter-Sport-Channel",
 "author": "Nexter",
@@ -37,8 +36,6 @@
 "url": "https://raw.githubusercontent.com/Tonnexter/Tonnexter/KhunKamMee/Nexter-PremierLeague.html",
 "import": "true"
 },
-
-
 
 
 
@@ -82,16 +79,18 @@
 {
 "name": "Nexter--หนังออนไลน์--VOD",
 "author": "Nexter",
-"image": "https://as2.ftcdn.net/v2/jpg/04/23/92/79/1000_F_423927917_w4ACaqLIRByore0D1DkWLLiVJK2UbY6N.jpg",
+"image": "https://raw.githubusercontent.com/Tonnexter/Tonnexter/refs/heads/KhunKamMee/Picture/Netflix11tt.jpg",
 "url": "https://pastebin.com/raw/rwL9E0jb",
 "import": "true"
 },
 
 
 
-{ "name"              :     "Nexter-MOVIESERIES-VOD", "author": "Nexter",
-"image"             :     "https://png.pngtree.com/png-clipart/20220509/original/pngtree-live-streaming-png-logo-png-image_7667572.png",
-"url"               :     "https://raw.githubusercontent.com/Tonnexter/Tonnexter/KhunKamMee/MOVIeSERIES.html",
+{ 
+ "name": "Nexter-MOVIESERIES-VOD", 
+ "author": "Nexter",
+"image": "https://raw.githubusercontent.com/Tonnexter/Tonnexter/refs/heads/KhunKamMee/Picture/Netflix22tt.jpg",
+"url": "https://raw.githubusercontent.com/Tonnexter/Tonnexter/KhunKamMee/MOVIeSERIES.html",
 "import": "false" 
 },
  
@@ -123,11 +122,12 @@
 
 
 
+
+ 
+
+
 ]
 }​
-
-
-
 
 
 
