--- a/NexterChannel.html
+++ b/NexterChannel.html
@@ -108,7 +108,7 @@
 
 
 {
-"name": "Nexter-ALL-ChanNEL",
+"name": "Nexter-ALL-IPTV-ChanNEL",
 "author": "Nexter",
 "image": "https://img.freepik.com/premium-vector/modern-abstract-letter-geometric-logo_1021316-63.jpg",
 "imageScale": "fitStart",
