--- a/NexterChannel.html
+++ b/NexterChannel.html
@@ -98,7 +98,7 @@
  "name": "Nexter-MOVIESERIES-VOD", 
  "author": "Nexter",
 "image": "https://raw.githubusercontent.com/Tonnexter/Tonnexter/refs/heads/KhunKamMee/Picture/Netflix22tt.jpg",
-"imageScale": "fitStart",
+"imageScale": "centerCrop",
 "url": "https://raw.githubusercontent.com/Tonnexter/Tonnexter/KhunKamMee/MOVIeSERIES.html",
 "import": "false" 
 },
@@ -111,7 +111,7 @@
 "name": "Nexter-ALL-IPTV-ChanNEL",
 "author": "Nexter",
 "image": "https://img.freepik.com/premium-vector/modern-abstract-letter-geometric-logo_1021316-63.jpg",
-"imageScale": "fitStart",
+"imageScale": "centerCrop",
 "url": "https://raw.githubusercontent.com/Tonnexter/Tonnexter/refs/heads/KhunKamMee/Nexter-All-ChanNEL.html",
 "import": "true"
 },
