--- a/NexterChannel.html
+++ b/NexterChannel.html
@@ -1,6 +1,6 @@
 {
 "name": "Khun KamMEE Channel",
-"author": "[บ้านคูณคำมี <อัพเดท:12.12.2567:12.00>]",
+"author": "[บ้านคูณคำมี <อัพเดท:13.12.2567:21.00>]",
 "image": "https://raw.githubusercontent.com/Tonnexter/Tonnexter/refs/heads/KhunKamMee/Picture/KM-LOGO/1.png",
 "url": "https://raw.githubusercontent.com/Tonnexter/Tonnexter/KhunKamMee/NexterChannel.html",
 "info": "[บ้านคูณคำมี แชนแนล]",
@@ -13,7 +13,7 @@
 "name": "Nexter-TV-Digital",
 "author": "Nexter",
 "image": "https://digital.nbtc.go.th/DigitalNBTC/media/source_media/LOGO_circle.png?ext=.png",
-"imageScale": "fitStart",
+"imageScale": "centerCrop",
 "url": "https://raw.githubusercontent.com/Tonnexter/Tonnexter/KhunKamMee/DigitalTV.html",
 "import": "true"
 },
@@ -24,7 +24,7 @@
 "name": "Movie <โรงหนังของแล้ม>",
 "author": "Nexter",
 "image": "https://leam.tech/assets/navbar/logo.png",
-"imageScale": "fitStart",
+"imageScale": "centerCrop",
 "url": "https://raw.githubusercontent.com/Tonnexter/Tonnexter/KhunKamMee/Nexter%20Moviees.html",
 "import": "true"
 },
@@ -35,7 +35,7 @@
 "name": "Nexter-Sport-Channel",
 "author": "Nexter",
 "image": "https://upload.wikimedia.org/wikipedia/en/thumb/f/f2/Premier_League_Logo.svg/1200px-Premier_League_Logo.svg.png",
-"imageScale": "fitStart",
+"imageScale": "centerCrop",
 "url": "https://raw.githubusercontent.com/Tonnexter/Tonnexter/KhunKamMee/Nexter-PremierLeague.html",
 "import": "true"
 },
@@ -76,7 +76,7 @@
 "name": "Nexter-Document-Channel",
 "author": "Nexter",
 "image": "https://upload.wikimedia.org/wikipedia/commons/thumb/f/f5/History_Logo.svg/571px-History_Logo.svg.png",
-"imageScale": "fitStart",
+"imageScale": "centerCrop",
 "url": "https://raw.githubusercontent.com/Tonnexter/Tonnexter/KhunKamMee/Documentary.html",
 "import": "false"
 },
@@ -87,7 +87,7 @@
 "name": "Nexter--หนังออนไลน์--VOD",
 "author": "Nexter",
 "image": "https://raw.githubusercontent.com/Tonnexter/Tonnexter/refs/heads/KhunKamMee/Picture/Netflix11tt.jpg",
-"imageScale": "fitStart",
+"imageScale": "centerCrop",
 "url": "https://pastebin.com/raw/rwL9E0jb",
 "import": "true"
 },
