--- a/NexterChannel.html
+++ b/NexterChannel.html
@@ -110,7 +110,7 @@
 {
 "name": "Nexter-ALL-IPTV-ChanNEL",
 "author": "Nexter",
-"image": "https://img.freepik.com/premium-vector/modern-abstract-letter-geometric-logo_1021316-63.jpg",
+"image": "https://upload.wikimedia.org/wikipedia/commons/b/b3/Next_logo.png",
 "imageScale": "centerCrop",
 "url": "https://raw.githubusercontent.com/Tonnexter/Tonnexter/refs/heads/KhunKamMee/Nexter-All-ChanNEL.html",
 "import": "true"
