--- a/NexterChannel.html
+++ b/NexterChannel.html
@@ -111,7 +111,7 @@
 "name": "Nexter-ALL-IPTV-ChanNEL",
 "author": "Nexter",
 "image": "https://upload.wikimedia.org/wikipedia/commons/b/b3/Next_logo.png",
-"imageScale": "centerCrop",
+"imageScale": "fitStart",
 "url": "https://raw.githubusercontent.com/Tonnexter/Tonnexter/refs/heads/KhunKamMee/Nexter-All-ChanNEL.html",
 "import": "true"
 },
