--- a/NexterChannel.html
+++ b/NexterChannel.html
@@ -1,6 +1,6 @@
 {
 "name": "Khun KamMEE Channel",
-"author": "[บ้านคูณคำมี <อัพเดท:13.12.2567:21.00>]",
+"author": "[บ้านคูณคำมี <อัพเดท:13.12.2567:22.00>]",
 "image": "https://raw.githubusercontent.com/Tonnexter/Tonnexter/refs/heads/KhunKamMee/Picture/KM-LOGO/1.png",
 "url": "https://raw.githubusercontent.com/Tonnexter/Tonnexter/KhunKamMee/NexterChannel.html",
 "info": "[บ้านคูณคำมี แชนแนล]",
@@ -111,7 +111,7 @@
 "name": "Nexter-ALL-IPTV-ChanNEL",
 "author": "Nexter",
 "image": "https://raw.githubusercontent.com/Tonnexter/Tonnexter/refs/heads/KhunKamMee/Picture/nextmodern.jpg",
-"imageScale": "fitStart",
+"imageScale": "centerCrop",
 "url": "https://raw.githubusercontent.com/Tonnexter/Tonnexter/refs/heads/KhunKamMee/Nexter-All-ChanNEL.html",
 "import": "true"
 },
