--- a/Nexter Moviees.html
+++ b/Nexter Moviees.html
@@ -2,7 +2,7 @@
 "name": "Movie<โรงหนังของแล้ม>",
 "image": "https://raw.githubusercontent.com/Tonnexter/Tonnexter/refs/heads/KhunKamMee/Picture/KM-LOGO/3.png",
 "url": "https://github.com/Tonnexter/Tonnexter/edit/KhunKamMee/Nexter%20Moviees.html", 
-"author": "[<อัพเดท:12.12.2567:12.00>]",
+"author": "[<อัพเดท:14.12.2567:13.00>]",
 "info": "โรงหนังของแล้ม",
 "stations" : [
 
@@ -18,6 +18,19 @@ url:"https://m1free.inwstream.com:1936/movie3/No_Surrender_2018/No_Surrender_201
 "userAgent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.140 Maxthon/5.2.7.3000",
 "playInNatPlayer": "true"
 }, 
+
+
+
+
+
+{  
+name:" คืนอำมหิต: อำมหิตไม่หยุดฆ่า (2021)",
+image:"https://img.inwiptv.net/postor/20210719082833the-forever-purge-60d510c0db5b9.jpg",
+url:"https://m1free.inwstream.com:1936/movie3/The_Forever_Purge_2021/The_Forever_Purge_2021_th_1080p_F.mp4/chunk.m3u8",
+"referer": "https://www.123-hd.com/",
+"userAgent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.140 Maxthon/5.2.7.3000",
+"playInNatPlayer": "true"
+},     
 
 
 
