--- a/Nexter Moviees.html
+++ b/Nexter Moviees.html
@@ -85,9 +85,9 @@ url:"https://m1free.inwstream.com:1936/movie3/Fled_1996/Fled_1996_TH_1080p.mp4/c
 
     
 {  
-name:"ทูมสโตน ดวลกลางตะวัน",
-image:"https://img.inwiptv.net/postor/20220419183155tombstone-556a03a033e98.jpg",
-url:"https://m1free.inwstream.com:1936/movie3/Tombstone_1993/Tombstone_1993_TH_1080p.mp4/chunk.m3u8",
+name:"ซิลเวอราโด (1985)",
+image:"https://img.inwiptv.net/postor/202412240113507gGnirycubKhtFGVhpvtb4f3Cok.jpg",
+url:"https://m1free.inwstream.com:1936/movie4/Silverado_1985/Silverado_1985_th_1080.mp4/chunk.m3u8",
 "referer": "https://www.123-hd.com/",
 "userAgent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.140 Maxthon/5.2.7.3000",
 "playInNatPlayer": "true"
