--- a/Nexter Moviees.html
+++ b/Nexter Moviees.html
@@ -11,6 +11,21 @@
 
 
 {  
+name:"เครเว่น เดอะ ฮันเตอร์ (2024)",
+image:"https://img.inwiptv.net/postor/20241227073719i47IUSsN126K11JUzqQIOi1Mg1M.jpg",
+url:"https://m1free.inwstream.com:1936/movie4/Kraven_the_Hunter_2024/Kraven_the_Hunter_2024_thr_z1.mp4/chunk.m3u8",
+"referer": "https://www.123-hd.com/",
+"userAgent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.140 Maxthon/5.2.7.3000",
+"playInNatPlayer": "true"
+},
+
+
+
+
+
+
+    
+{  
 name:"แผนปล้นคนหักเหลี่ยม (2024)",
 image:"https://img.inwiptv.net/postor/20241223005726xBJnIvRdL0nDHgvivr6EgBQizes.jpg",
 url:"https://m1free.inwstream.com:1936/movie4/Cash_Out_2024/Cash_Out_2024_th_1080.mp4/chunk.m3u8",
