--- a/Nexter Moviees.html
+++ b/Nexter Moviees.html
@@ -11,9 +11,9 @@
     
     
 {  
-name:"คนหอนกลายพันธุ์ (2024)",
-image:"https://img.inwiptv.net/postor/20250104202507elKf8Y5yi6Rl6teKsrQg0GAwaQD.jpg",
-url:"https://m1free.inwstream.com:1936/movie4/Werewolves_2024/Werewolves_2024_thr_z1.mp4/chunk.m3u8",
+name:"หลวงพี่เท่ง Comeback The Holy Man Comeback (2024)",
+image:"https://img.inwiptv.net/postor/20250108184350iI7DI648Q3WbprilXfxCSxFI07D.jpg",
+url:"https://m1free.inwstream.com:1936/movie4/The_Holy_Man_Comeback_2024/The_Holy_Man_Comeback_2024_th_1080.mp4/chunk.m3u8",
 "referer": "https://www.123-hd.com/",
 "userAgent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.140 Maxthon/5.2.7.3000",
 "playInNatPlayer": "true"
