--- a/Nexter-All-ChanNEL.html
+++ b/Nexter-All-ChanNEL.html
@@ -21,6 +21,14 @@
 },
 
 {
+"name": "GUFLIX มาดู มาฟัง! Nexter",
+"author": "Nexter",
+"image": "http://guflix.streaming-fast.com/logo/guflix.gif",
+"url": "https://pastebin.com/raw/vDPmGjiX",
+"import": "true"
+},
+
+{
 "name": "Nexter-IDPLAY-TV-ALL",
 "author": "Nexter",
 "image": "https://png.pngtree.com/template/20210127/ourmid/pngtree-speed-play-logo-image_479144.jpg",
