--- a/Nexter-All-ChanNEL.html
+++ b/Nexter-All-ChanNEL.html
@@ -81,6 +81,15 @@
  },
 
 
+{
+"name": "Nexter-LEGALIPTV-ALL",
+"image": "https://iili.io/23SA3jj.jpg",
+"url": "http://tiny.cc/LEGALIPTV",
+"info": "ฟรี!!! อย่านำไปจำหน่าย นะจ๊ะ! นะจ๊ะ!",
+"import": false
+ },
+
+
 
 
 
