--- a/Nexter-All-ChanNEL.html
+++ b/Nexter-All-ChanNEL.html
@@ -49,7 +49,7 @@
 {
 "name": "Nexter-Dookeela-ALL",
 "author": "Nexter",
-"image": "https://upload.wikimedia.org/wikipedia/fr/thumb/5/58/Logo_DKL_Radio_Dreyeckland_2019.png/220px-Logo_DKL_Radio_Dreyeckland_2019.png",
+"image": "https://dookeela.live/images/logo-bar.png",
 "url": "https://raw.githubusercontent.com/Tonnexter/Tonnexter/KhunKamMee/Dookeela1.html",
 "import": "true"
 },
