--- a/Nexter Moviees.html
+++ b/Nexter Moviees.html
@@ -141,7 +141,7 @@ url:"https://img.inwiptv.net/postor/202411150719572cxhvwyEwRlysAmRH4iodkvo0z5.jp
 {  
 name:"พลิกตำนานฟัดทะลุเวลา (2024)",
 image:"https://img.inwiptv.net/postor/20241105013353qbImUt1d3itXcB81BCItPZlfbyr.jpg",
-url:"https://m1free.inwstream.com:1936/movie4/A_Legend_2024/A_Legend_2024_thr_z1.mp4/chunk.m3u8",
+url:"https://hot.24playerhd.com/ioshls/64480322d73440008a02f962f6fb4957/64480322d73440008a02f962f6fb4957.m3u8",
 "referer": "https://www.123-hd.com/",
 "userAgent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.140 Maxthon/5.2.7.3000",
 "playInNatPlayer": "true"
