--- a/Nexter Moviees.html
+++ b/Nexter Moviees.html
@@ -9,6 +9,22 @@
 
 
 
+
+{  
+name:"ปอบแม่ใหญ่แดง (2024)",
+image:"https://img.inwiptv.net/postor/20250115231927ue04zUriVc6wwVCNaZRs3ZPZDlV.jpg",
+url:"https://m1free.inwstream.com:1936/movie4/The_Haunted_Granny_2024/The_Haunted_Granny_2024_th_1080.mp4/chunk.m3u8",
+"referer": "https://www.123-hd.com/",
+"userAgent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.140 Maxthon/5.2.7.3000",
+"playInNatPlayer": "true"
+}, 
+
+
+
+
+
+
+
     
 {  
 name:"มูฟาซา เดอะ ไลอ้อน คิง (2024)",
