--- a/Nexter Moviees.html
+++ b/Nexter Moviees.html
@@ -9,6 +9,38 @@
 
 
 
+
+{  
+name:"Sabata ซาบาต้า สิงห์ปืนไว (1969)",
+image:"https://img.inwiptv.net/postor/20210722163519sabata-54e8c6116f367.jpg",
+url:"https://m1free.inwstream.com:1936/movie3/Sabata_1969/Sabata_1969_TH_1080p.mp4/chunk.m3u8",
+"referer": "https://www.123-hd.com/",
+"userAgent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.140 Maxthon/5.2.7.3000",
+"playInNatPlayer": "true"
+}, 
+
+
+
+
+
+
+
+
+{  
+name:"Return of Sabata ซาบาต้า ปืนมหัศจรรย์ (1971)",
+image:"https://img.inwiptv.net/postor/20210722114737return-of-sabata-5d818a0355987.jpg",
+url:"https://m1free.inwstream.com:1936/movie3/Return_of_Sabata_1971/Return_of_Sabata_1971_TH_1080p.mp4/chunk.m3u8",
+"referer": "https://www.123-hd.com/",
+"userAgent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.140 Maxthon/5.2.7.3000",
+"playInNatPlayer": "true"
+}, 
+
+
+
+
+
+
+
     
 {  
 name:"มูฟาซา เดอะ ไลอ้อน คิง (2024)",
