--- a/Nexter Moviees.html
+++ b/Nexter Moviees.html
@@ -2,7 +2,7 @@
 "name": "Movie<โรงหนังของแล้ม>",
 "image": "https://raw.githubusercontent.com/Tonnexter/Tonnexter/refs/heads/KhunKamMee/Picture/KM-LOGO/3.png",
 "url": "https://github.com/Tonnexter/Tonnexter/edit/KhunKamMee/Nexter%20Moviees.html", 
-"author": "[<อัพเดท:19.01.2568:18.00>]",
+"author": "[<อัพเดท:20.01.2568:10.00>]",
 "info": "โรงหนังของแล้ม",
 "stations" : [
 
@@ -10,6 +10,71 @@
 
 
 
+{  
+name:"ภารกิจคนอึด ฝ่าสงครามดวงดาว (2021)",
+image:"https://img.inwiptv.net/postor/20210527172512cosmic-sin-603c929135c2e.jpg",
+url:"https://m1free.inwstream.com:1936/movie3/Cosmic_Sin_2021/Cosmic_Sin_2021_th_1080p.mp4/chunk.m3u8",
+"referer": "https://www.123-hd.com/",
+"userAgent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.140 Maxthon/5.2.7.3000",
+"playInNatPlayer": "true"
+}, 
+
+
+
+
+
+
+
+
+{  
+name:"400 Bullets (2021)",
+image:"https://img.inwiptv.net/postor/20210629140521burp795vripHCoq8VAT0Dm5SPE.jpg",
+url:"https://m1free.inwstream.com:1936/movie3/400_Bullets_2021/400_Bullets_2021_th_1080p_HDTV.mp4/chunk.m3u8",
+"referer": "https://www.123-hd.com/",
+"userAgent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.140 Maxthon/5.2.7.3000",
+"playInNatPlayer": "true"
+},
+
+
+
+
+
+
+
+
+
+{  
+name:"Blood Hunters: Rise of the Hybrids (2019)",
+image:"https://img.inwiptv.net/postor/2021070514240373y0ysr3KX9FzwRXVPXSnIb8P2.jpg",
+url:"https://m1free.inwstream.com:1936/movie3/Blood_Hunters_Rise_of_the_Hybrids_2019/Blood_Hunters_Rise_of_the_Hybrids_2019_th_1080p_HDTV.mp4/chunk.m3u8",
+"referer": "https://www.123-hd.com/",
+"userAgent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.140 Maxthon/5.2.7.3000",
+"playInNatPlayer": "true"
+},
+
+
+
+
+
+
+
+
+
+
+{  
+name:"The Doorman (2020)",
+image:"https://img.inwiptv.net/postor/20210705143027pklyUbh4k1DbHdnsOMASyw7C6NH.jpg",
+url:"https://m1free.inwstream.com:1936/movie3/The_Doorman_2020/The_Doorman_2020_th_1080p_HDTV.mp4/chunk.m3u8",
+"referer": "https://www.123-hd.com/",
+"userAgent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.140 Maxthon/5.2.7.3000",
+"playInNatPlayer": "true"
+},
+
+
+
+
+
+    
 {  
 name:"Sabata ซาบาต้า สิงห์ปืนไว (1969)",
 image:"https://img.inwiptv.net/postor/20210722163519sabata-54e8c6116f367.jpg",
