--- a/Nexter Moviees.html
+++ b/Nexter Moviees.html
@@ -2,7 +2,7 @@
 "name": "Movie<โรงหนังของแล้ม>",
 "image": "https://raw.githubusercontent.com/Tonnexter/Tonnexter/refs/heads/KhunKamMee/Picture/KM-LOGO/3.png",
 "url": "https://github.com/Tonnexter/Tonnexter/edit/KhunKamMee/Nexter%20Moviees.html", 
-"author": "[<อัพเดท:20.01.2568:10.00>]",
+"author": "[<อัพเดท:22.01.2568:10.00>]",
 "info": "โรงหนังของแล้ม",
 "stations" : [
 
@@ -11,9 +11,9 @@
 
 
 {  
-name:"ภารกิจคนอึด ฝ่าสงครามดวงดาว (2021)",
-image:"https://img.inwiptv.net/postor/20210527172512cosmic-sin-603c929135c2e.jpg",
-url:"https://m1free.inwstream.com:1936/movie3/Cosmic_Sin_2021/Cosmic_Sin_2021_th_1080p.mp4/chunk.m3u8",
+name:"ดับอำมหิต (1990)",
+image:"https://img.inwiptv.net/postor/20210623122325bird-on-a-wire-5350ed6b6c622.jpg",
+url:"https://m1free.inwstream.com:1936/movie3/Bird_on_a_Wire_1990/Bird_on_a_Wire_1990_TH_1080p.mp4/chunk.m3u8",
 "referer": "https://www.123-hd.com/",
 "userAgent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.140 Maxthon/5.2.7.3000",
 "playInNatPlayer": "true"
