--- a/Nexter Moviees.html
+++ b/Nexter Moviees.html
@@ -2,7 +2,7 @@
 "name": "Movie<โรงหนังของแล้ม>",
 "image": "https://raw.githubusercontent.com/Tonnexter/Tonnexter/refs/heads/KhunKamMee/Picture/KM-LOGO/3.png",
 "url": "https://github.com/Tonnexter/Tonnexter/edit/KhunKamMee/Nexter%20Moviees.html", 
-"author": "[<อัพเดท:22.01.2568:10.00>]",
+"author": "[<อัพเดท:24.01.2568:10.00>]",
 "info": "โรงหนังของแล้ม",
 "stations" : [
 
@@ -11,15 +11,47 @@
 
 
 {  
-name:"ดับอำมหิต (1990)",
-image:"https://img.inwiptv.net/postor/20210623122325bird-on-a-wire-5350ed6b6c622.jpg",
-url:"https://m1free.inwstream.com:1936/movie3/Bird_on_a_Wire_1990/Bird_on_a_Wire_1990_TH_1080p.mp4/chunk.m3u8",
+name:"แผนปล้นซอมบี้เดือด (2021)",
+image:"https://img.inwiptv.net/postor/20210521161546x3taBaWfRzw1NIKhEPpKPwKBAOC.jpg",
+url:"https://m1free.inwstream.com:1936/movie3/Army_of_the_Dead_2021/Army_of_the_Dead_2021_th_1080p.mp4/chunk.m3u8",
 "referer": "https://www.123-hd.com/",
 "userAgent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.140 Maxthon/5.2.7.3000",
 "playInNatPlayer": "true"
 }, 
 
 
+
+
+
+
+
+
+
+{  
+name:"สายลับกลับมาลุย (2025)",
+image:"https://img.inwiptv.net/postor/202501181039263L3l6LsiLGHkTG4RFB2aBA6BttB.jpg",
+url:"https://m1free.inwstream.com:1936/movie4/Back_in_Action_2025/Back_in_Action_2025_th_1080.mp4/chunk.m3u8",
+"referer": "https://www.123-hd.com/",
+"userAgent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.140 Maxthon/5.2.7.3000",
+"playInNatPlayer": "true"
+}, 
+
+
+
+
+
+
+
+
+
+{  
+name:"เกมนักล่า ล่านักฆ่า (2024)",
+image:"https://img.inwiptv.net/postor/20250124073649ybMfoKFG3mktojIHySJQZR86NiO.jpg",
+url:"https://m1free.inwstream.com:1936/movie4/The_Killer_s_Game_2024/The_Killer_s_Game_2024_th_1080.mp4/chunk.m3u8",
+"referer": "https://www.123-hd.com/",
+"userAgent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.140 Maxthon/5.2.7.3000",
+"playInNatPlayer": "true"
+}, 
 
 
 
