--- a/Nexter Moviees.html
+++ b/Nexter Moviees.html
@@ -2,7 +2,7 @@
 "name": "Movie<โรงหนังของแล้ม>",
 "image": "https://raw.githubusercontent.com/Tonnexter/Tonnexter/refs/heads/KhunKamMee/Picture/KM-LOGO/3.png",
 "url": "https://github.com/Tonnexter/Tonnexter/edit/KhunKamMee/Nexter%20Moviees.html", 
-"author": "[<อัพเดท:24.01.2568:10.00>]",
+"author": "[<อัพเดท:27.01.2568:10.00>]",
 "info": "โรงหนังของแล้ม",
 "stations" : [
 
@@ -11,9 +11,9 @@
 
 
 {  
-name:"แผนปล้นซอมบี้เดือด (2021)",
-image:"https://img.inwiptv.net/postor/20210521161546x3taBaWfRzw1NIKhEPpKPwKBAOC.jpg",
-url:"https://m1free.inwstream.com:1936/movie3/Army_of_the_Dead_2021/Army_of_the_Dead_2021_th_1080p.mp4/chunk.m3u8",
+name:"Hard Kill (2020)",
+image:"https://img.inwiptv.net/postor/20210510113435ugZW8ocsrfgI95pnQ7wrmKDxIe.jpg",
+url:"https://m1free.inwstream.com:1936/movie3/Hard_Kill_2020/Hard_Kill_2020_th_1080p_HDTV.mp4/chunk.m3u8",
 "referer": "https://www.123-hd.com/",
 "userAgent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.140 Maxthon/5.2.7.3000",
 "playInNatPlayer": "true"
@@ -25,8 +25,7 @@ url:"https://m1free.inwstream.com:1936/movie3/Army_of_the_Dead_2021/Army_of_the_
 
 
 
-
-
+    
 {  
 name:"สายลับกลับมาลุย (2025)",
 image:"https://img.inwiptv.net/postor/202501181039263L3l6LsiLGHkTG4RFB2aBA6BttB.jpg",
@@ -170,8 +169,8 @@ url:"https://m1free.inwstream.com:1936/movie3/Wasabi_2001/Wasabi_2001_TH_1080p.m
     
 {  
 name:"ยุทธการยึดด่วนนรก 2",
-image:"https://fwiptv.tv/images/movie/20190308144802under-siege-2-dark-territory-53274110ef45e.jpg",
-url:"https://live.lnwplayer.com/hls/f1ed7e10-260c-4af5-9f1b-5de9ebe6d36f/index.m3u8",
+image:"https://img.inwiptv.net/postor/20190308144802under-siege-2-dark-territory-53274110ef45e.jpg",
+url:"https://m1free.inwstream.com:1936/movie3/Under-Siege-2-Dark-Territory-1995/Under-Siege-2-Dark-Territory-1995-TH-1080p.m4v/chunk.m3u8",
 "referer": "https://www.123-hd.com/",
 "userAgent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.140 Maxthon/5.2.7.3000",
 "playInNatPlayer": "true"
