--- a/Nexter Moviees.html
+++ b/Nexter Moviees.html
@@ -2,7 +2,7 @@
 "name": "Movie<โรงหนังของแล้ม>",
 "image": "https://raw.githubusercontent.com/Tonnexter/Tonnexter/refs/heads/KhunKamMee/Picture/KM-LOGO/3.png",
 "url": "https://github.com/Tonnexter/Tonnexter/edit/KhunKamMee/Nexter%20Moviees.html", 
-"author": "[<อัพเดท:27.01.2568:10.00>]",
+"author": "[<อัพเดท:29.01.2568:10.00>]",
 "info": "โรงหนังของแล้ม",
 "stations" : [
 
@@ -10,6 +10,23 @@
 
 
 
+{  
+name:"Search and Destroy (2020)",
+image:"https://img.inwiptv.net/postor/20210329163955mTwZ0wE6i93thOjSldztGkqyEHJ.jpg",
+url:"https://m1free.inwstream.com:1936/movie3/Search_and_Destroy_2020/Search_and_Destroy_2020_th_1080p.mp4/chunk.m3u8",
+"referer": "https://www.123-hd.com/",
+"userAgent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.140 Maxthon/5.2.7.3000",
+"playInNatPlayer": "true"
+}, 
+
+
+
+
+
+
+
+
+    
 {  
 name:"Hard Kill (2020)",
 image:"https://img.inwiptv.net/postor/20210510113435ugZW8ocsrfgI95pnQ7wrmKDxIe.jpg",
@@ -19,6 +36,59 @@ url:"https://m1free.inwstream.com:1936/movie3/Hard_Kill_2020/Hard_Kill_2020_th_1
 "playInNatPlayer": "true"
 }, 
 
+
+
+
+
+
+
+
+
+
+{  
+name:"The Silencing (2020)",
+image:"https://img.inwiptv.net/postor/20210414041113mUInz05QlvukSrGOulKm5dbOR7L.jpg",
+url:"https://m1free.inwstream.com:1936/movie3/The_Silencing_2020/The_Silencing_2020_th_1080p_HDTV.mp4/chunk.m3u8",
+"referer": "https://www.123-hd.com/",
+"userAgent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.140 Maxthon/5.2.7.3000",
+"playInNatPlayer": "true"
+},     
+
+
+
+
+
+
+
+
+
+
+
+{  
+name:"Attack of the Unknown (2020) ",
+image:"https://img.inwiptv.net/postor/20210423013843c5wDSjzstchAAN3cnVEhAlo10eC.jpg",
+url:"https://m1free.inwstream.com:1936/movie3/Attack_of_the_Unknown_2020/Attack_of_the_Unknown_2020_th_1080p_HDTV.mp4/chunk.m3u8",
+"referer": "https://www.123-hd.com/",
+"userAgent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.140 Maxthon/5.2.7.3000",
+"playInNatPlayer": "true"
+},    
+
+
+
+
+
+
+
+
+{  
+name:"Agent Red แผนยั้งไวรัสล้างโลก",
+image:"https://img.inwiptv.net/postor/20210421184822agent_katos_4_h.jpg",
+url:"https://m1free.inwstream.com:1936/movie3/Agent_Red_2000/Agent_Red_2000_TH_1080p.mp4/chunk.m3u8",
+"referer": "https://www.123-hd.com/",
+"userAgent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.140 Maxthon/5.2.7.3000",
+"playInNatPlayer": "true"
+}, 
+    
 
 
 
