--- a/Nexter Moviees.html
+++ b/Nexter Moviees.html
@@ -2,7 +2,7 @@
 "name": "Movie<โรงหนังของแล้ม>",
 "image": "https://raw.githubusercontent.com/Tonnexter/Tonnexter/refs/heads/KhunKamMee/Picture/KM-LOGO/3.png",
 "url": "https://github.com/Tonnexter/Tonnexter/edit/KhunKamMee/Nexter%20Moviees.html", 
-"author": "[<อัพเดท:29.01.2568:10.00>]",
+"author": "[<อัพเดท:02.02.2568:10.00>]",
 "info": "โรงหนังของแล้ม",
 "stations" : [
 
@@ -28,9 +28,44 @@ url:"https://m1free.inwstream.com:1936/movie3/Search_and_Destroy_2020/Search_and
 
     
 {  
-name:"Hard Kill (2020)",
-image:"https://img.inwiptv.net/postor/20210510113435ugZW8ocsrfgI95pnQ7wrmKDxIe.jpg",
-url:"https://m1free.inwstream.com:1936/movie3/Hard_Kill_2020/Hard_Kill_2020_th_1080p_HDTV.mp4/chunk.m3u8",
+name:"พี่น้องวีรสตรี (2019)",
+image:"https://img.inwiptv.net/postor/20210131074810poster-780.jpg",
+url:"https://m1free.inwstream.com:1936/movie3/Sisters_in_Arms_2019/Sisters_in_Arms_2019_th_1080p_FW.mp4/chunk.m3u8",
+"referer": "https://www.123-hd.com/",
+"userAgent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.140 Maxthon/5.2.7.3000",
+"playInNatPlayer": "true"
+}, 
+
+
+
+
+
+
+
+
+
+
+{  
+name:"มอนสเตอร์ ฮันเตอร์ (2020)",
+image:"https://img.inwiptv.net/postor/20210308014113uwjaCH7PiWrkz7oWJ4fcL3xGrb0.jpg",
+url:"https://m1free.inwstream.com:1936/movie3/Monster_Hunter_2020/Monster_Hunter_2020_th_1080p.mp4/chunk.m3u8",
+"referer": "https://www.123-hd.com/",
+"userAgent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.140 Maxthon/5.2.7.3000",
+"playInNatPlayer": "true"
+}, 
+
+
+
+
+
+
+
+
+
+{  
+name:"ฝ่าวิกฤติ 12 รอบ 3 :ล็อคดาวน์ (2015)",
+image:"https://img.inwiptv.net/postor/2019070607505212-rounds-3-lockdown-562efd8bf0ded.jpg",
+url:"https://m1free.inwstream.com:1936/movie3/12_Rounds_3_Lockdown_2015/12_Rounds_3_Lockdown_2015_TH_1080p.mp4/chunk.m3u8",
 "referer": "https://www.123-hd.com/",
 "userAgent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.140 Maxthon/5.2.7.3000",
 "playInNatPlayer": "true"
