--- a/Nexter Moviees.html
+++ b/Nexter Moviees.html
@@ -2,7 +2,7 @@
 "name": "Movie<โรงหนังของแล้ม>",
 "image": "https://raw.githubusercontent.com/Tonnexter/Tonnexter/refs/heads/KhunKamMee/Picture/KM-LOGO/3.png",
 "url": "https://github.com/Tonnexter/Tonnexter/edit/KhunKamMee/Nexter%20Moviees.html", 
-"author": "[<อัพเดท:02.02.2568:10.00>]",
+"author": "[<อัพเดท:03.02.2568:10.00>]",
 "info": "โรงหนังของแล้ม",
 "stations" : [
 
@@ -116,9 +116,9 @@ url:"https://m1free.inwstream.com:1936/movie4/Back_in_Action_2025/Back_in_Action
 
 
 {  
-name:"เกมนักล่า ล่านักฆ่า (2024)",
-image:"https://img.inwiptv.net/postor/20250124073649ybMfoKFG3mktojIHySJQZR86NiO.jpg",
-url:"https://m1free.inwstream.com:1936/movie4/The_Killer_s_Game_2024/The_Killer_s_Game_2024_th_1080.mp4/chunk.m3u8",
+name:"เร็ว..แรง ทะลุไทเป (2024)",
+image:"https://img.inwiptv.net/postor/20250202180801qSc0AUvs8mRy00R9y8QYEHWIAQ9.jpg",
+url:"https://m1free.inwstream.com:1936/movie4/Weekend_in_Taipei_2024/Weekend_in_Taipei_2024_thr_z1.mp4/chunk.m3u8",
 "referer": "https://www.123-hd.com/",
 "userAgent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.140 Maxthon/5.2.7.3000",
 "playInNatPlayer": "true"
