--- a/Nexter Moviees.html
+++ b/Nexter Moviees.html
@@ -2,7 +2,7 @@
 "name": "Movie<โรงหนังของแล้ม>",
 "image": "https://raw.githubusercontent.com/Tonnexter/Tonnexter/refs/heads/KhunKamMee/Picture/KM-LOGO/3.png",
 "url": "https://github.com/Tonnexter/Tonnexter/edit/KhunKamMee/Nexter%20Moviees.html", 
-"author": "[<อัพเดท:03.02.2568:10.00>]",
+"author": "[<อัพเดท:09.02.2568:10.00>]",
 "info": "โรงหนังของแล้ม",
 "stations" : [
 
@@ -10,6 +10,24 @@
 
 
 
+{  
+name:"ตำรวจ ดิบ เดือด The Guardian (2023)",
+image:"https://img.inwiptv.net/postor/20250205200423rWqoCrRImxFHHO6IrZCchtgQczL.jpg",
+url:"https://m1free.inwstream.com:1936/movie4/The_Guardian_2023/The_Guardian_2023_th_1080.mp4/chunk.m3u8",
+"referer": "https://www.123-hd.com/",
+"userAgent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.140 Maxthon/5.2.7.3000",
+"playInNatPlayer": "true"
+}, 
+
+
+
+
+
+
+
+
+
+    
 {  
 name:"Search and Destroy (2020)",
 image:"https://img.inwiptv.net/postor/20210329163955mTwZ0wE6i93thOjSldztGkqyEHJ.jpg",
@@ -231,7 +249,7 @@ url:"https://m1free.inwstream.com:1936/movie4/Venom_The_Last_Dance_2024/Venom_Th
 {  
 name:"ธี่หยด 2 Death Whisperer 2 (2024)",
 image:"https://img.inwiptv.net/postor/20241020174720xPTyukOmTrJDwGPwHYwxEMieaqk.jpg",
-url:"https://m1free.inwstream.com:1936/movie4/Death_Whisperer_2_2024/Death_Whisperer_2_2024_thr_v1.mp4/chunk.m3u8",
+url:"https://m1free.inwstream.com:1936/movie4/Death_Whisperer_2_2024/Death_Whisperer_2_2024_th_1080.mp4/chunk.m3u8",
 "referer": "https://www.123-hd.com/",
 "userAgent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.140 Maxthon/5.2.7.3000",
 "playInNatPlayer": "true"
