--- a/Nexter Moviees.html
+++ b/Nexter Moviees.html
@@ -2,7 +2,7 @@
 "name": "Movie<โรงหนังของแล้ม>",
 "image": "https://raw.githubusercontent.com/Tonnexter/Tonnexter/refs/heads/KhunKamMee/Picture/KM-LOGO/3.png",
 "url": "https://github.com/Tonnexter/Tonnexter/edit/KhunKamMee/Nexter%20Moviees.html", 
-"author": "[<อัพเดท:09.02.2568:10.00>]",
+"author": "[<อัพเดท:11.02.2568:10.00>]",
 "info": "โรงหนังของแล้ม",
 "stations" : [
 
@@ -10,6 +10,25 @@
 
  
 
+{  
+name:"Transit 17 (2019)",
+image:"https://img.inwiptv.net/postor/202101252048562KnJM6NNDlR5zy1iHx1ykxk6B47.jpg",
+url:"https://m1free.inwstream.com:1936/movie3/Transit_17_2019/Transit_17_2019_th_1080p_HDTV.mp4/chunk.m3u8",
+"referer": "https://www.123-hd.com/",
+"userAgent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.140 Maxthon/5.2.7.3000",
+"playInNatPlayer": "true"
+},
+
+
+
+
+
+
+
+
+
+
+ 
 {  
 name:"มอนสเตอร์ ฮันเตอร์ (2020)",
 image:"https://img.inwiptv.net/postor/20210308014113uwjaCH7PiWrkz7oWJ4fcL3xGrb0.jpg",
