--- a/Nexter Moviees.html
+++ b/Nexter Moviees.html
@@ -2,7 +2,7 @@
 "name": "Movie<โรงหนังของแล้ม>",
 "image": "https://raw.githubusercontent.com/Tonnexter/Tonnexter/refs/heads/KhunKamMee/Picture/KM-LOGO/3.png",
 "url": "https://github.com/Tonnexter/Tonnexter/edit/KhunKamMee/Nexter%20Moviees.html", 
-"author": "[<อัพเดท:11.02.2568:10.00>]",
+"author": "[<อัพเดท:14.02.2568:10.00>]",
 "info": "โรงหนังของแล้ม",
 "stations" : [
 
@@ -10,6 +10,43 @@
 
  
 
+{  
+name:"กัปตัน อเมริกา: ศึกฮีโร่จักรวาลใหม่ (2025)",
+image:"https://img.inwiptv.net/postor/20250213191228mZUTBHzb0DXgrISwM28OjqGlFYa.jpg",
+url:"https://m1free.inwstream.com:1936/movie4/Captain_America_Brave_New_World_2025/Captain_America_Brave_New_World_2025_thr_v1.mp4/chunk.m3u8",
+"referer": "https://www.123-hd.com/",
+"userAgent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.140 Maxthon/5.2.7.3000",
+"playInNatPlayer": "true"
+},
+
+
+
+
+
+
+
+
+
+
+ 
+{  
+name:"ฝ่าวิวาห์ระห่ำ (2022)",
+image:"https://img.inwiptv.net/postor/20250214011212t79ozwWnwekO0ADIzsFP1E5SkvR.jpg",
+url:"https://m1free.inwstream.com:1936/movie3/Shotgun_Wedding_2022/Shotgun_Wedding_2022_th_1080.mp4/chunk.m3u8",
+"referer": "https://www.123-hd.com/",
+"userAgent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.140 Maxthon/5.2.7.3000",
+"playInNatPlayer": "true"
+}, 
+
+
+
+
+
+
+
+
+
+ 
 {  
 name:"ฝ่าวิกฤติ 12 รอบ 3 :ล็อคดาวน์ (2015)",
 image:"https://img.inwiptv.net/postor/2019070607505212-rounds-3-lockdown-562efd8bf0ded.jpg",
