--- a/Nexter Moviees.html
+++ b/Nexter Moviees.html
@@ -2,7 +2,7 @@
 "name": "Movie<โรงหนังของแล้ม>",
 "image": "https://raw.githubusercontent.com/Tonnexter/Tonnexter/refs/heads/KhunKamMee/Picture/KM-LOGO/3.png",
 "url": "https://github.com/Tonnexter/Tonnexter/edit/KhunKamMee/Nexter%20Moviees.html", 
-"author": "[<อัพเดท:16.02.2568:10.00>]",
+"author": "[<อัพเดท:17.02.2568:10.00>]",
 "info": "โรงหนังของแล้ม",
 "stations" : [
 
@@ -10,6 +10,60 @@
 
 
 
+{  
+name:"I Am Vengeance: Retaliation (2020)",
+image:"https://img.inwiptv.net/postor/20201126211814fshqvFBihzipvA5l9hwHQVuZCNG.jpg",
+url:"https://m1free.inwstream.com:1936/movie3/I_Am_Vengeance_Retaliation_2020/I_Am_Vengeance_Retaliation_2020_th_1080p_HDTV.mp4/chunk.m3u8",
+"referer": "https://www.123-hd.com/",
+"userAgent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.140 Maxthon/5.2.7.3000",
+"playInNatPlayer": "true"
+},
+
+
+
+
+
+
+
+
+
+ 
+{  
+name:"ปืนเดือดคนระห่ำ (1995)",
+image:"https://img.inwiptv.net/postor/20201202113011images.jpg",
+url:"https://m1free.inwstream.com:1936/movie3/The_Shooter_1995/The_Shooter_1995_TH_1080p.mp4/chunk.m3u8",
+"referer": "https://www.123-hd.com/",
+"userAgent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.140 Maxthon/5.2.7.3000",
+"playInNatPlayer": "true"
+},
+
+
+
+
+
+
+
+
+
+ 
+{  
+name:"เทเน็ท (2020)",
+image:"https://img.inwiptv.net/postor/20201205201020s5jxwhLPGI4Xow8GXwenzL1MkwF.jpg",
+url:"https://m1free.inwstream.com:1936/movie3/Tenet_2020/Tenet_2020_th_1080p_FW.mp4/chunk.m3u8",
+"referer": "https://www.123-hd.com/",
+"userAgent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.140 Maxthon/5.2.7.3000",
+"playInNatPlayer": "true"
+},
+
+
+
+
+
+
+
+
+
+ 
 {  
 name:"กัปตัน อเมริกา: ศึกฮีโร่จักรวาลใหม่ (2025)",
 image:"https://img.inwiptv.net/postor/20250213191228mZUTBHzb0DXgrISwM28OjqGlFYa.jpg",
