--- a/Nexter Moviees.html
+++ b/Nexter Moviees.html
@@ -2,7 +2,7 @@
 "name": "Movie<โรงหนังของแล้ม>",
 "image": "https://raw.githubusercontent.com/Tonnexter/Tonnexter/refs/heads/KhunKamMee/Picture/KM-LOGO/3.png",
 "url": "https://github.com/Tonnexter/Tonnexter/edit/KhunKamMee/Nexter%20Moviees.html", 
-"author": "[<อัพเดท:17.02.2568:10.00>]",
+"author": "[<อัพเดท:18.02.2568:10.00>]",
 "info": "โรงหนังของแล้ม",
 "stations" : [
 
@@ -11,9 +11,65 @@
 
 
 {  
-name:"I Am Vengeance: Retaliation (2020)",
-image:"https://img.inwiptv.net/postor/20201126211814fshqvFBihzipvA5l9hwHQVuZCNG.jpg",
-url:"https://m1free.inwstream.com:1936/movie3/I_Am_Vengeance_Retaliation_2020/I_Am_Vengeance_Retaliation_2020_th_1080p_HDTV.mp4/chunk.m3u8",
+name:"มหาประลัยคนอันตราย (2009)",
+image:"https://img.inwiptv.net/postor/20201111095144a-dangerous-man-5cb4e57cc36f8.jpg",
+url:"https://m1free.inwstream.com:1936/movie3/A_Dangerous_Man_2009/A_Dangerous_Man_2009_TH_480p.mp4/chunk.m3u8",
+"referer": "https://www.123-hd.com/",
+"userAgent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.140 Maxthon/5.2.7.3000",
+"playInNatPlayer": "true"
+},
+
+
+
+
+
+
+
+
+
+
+
+ 
+{  
+name:"Kill Mode (2020)",
+image:"https://img.inwiptv.net/postor/20201112165941pXA8YpiRAxTltGP4LOaJ1lr0x6c.jpg",
+url:"https://m1free.inwstream.com:1936/movie3/Kill_Mode_2020/Kill_Mode_2020_th_1080p_HDTV.mp4/chunk.m3u8",
+"referer": "https://www.123-hd.com/",
+"userAgent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.140 Maxthon/5.2.7.3000",
+"playInNatPlayer": "true"
+},
+
+
+
+
+
+
+
+
+ 
+{  
+name:"สิงห์แค้นปืนโหด (2012)",
+image:"https://img.inwiptv.net/postor/20201112152539dawn-rider-5cffd7e7e84ed.jpg",
+url:"https://m1free.inwstream.com:1936/movie3/Dawn_Raider_2012/Dawn_Raider_2012_TH_480p.mp4/chunk.m3u8",
+"referer": "https://www.123-hd.com/",
+"userAgent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.140 Maxthon/5.2.7.3000",
+"playInNatPlayer": "true"
+},
+
+
+
+
+
+
+
+
+
+
+ 
+{  
+name:"Legacy of Lies (2020)",
+image:"https://img.inwiptv.net/postor/20201104162704bhNHCeJDFDaB00A46AoCw2mggdE.jpg",
+url:"https://m1free.inwstream.com:1936/movie3/Legacy_of_Lies_2020/Legacy_of_Lies_2020_th_1080p_HDTV.mp4/chunk.m3u8",
 "referer": "https://www.123-hd.com/",
 "userAgent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.140 Maxthon/5.2.7.3000",
 "playInNatPlayer": "true"
