--- a/Nexter Moviees.html
+++ b/Nexter Moviees.html
@@ -103,24 +103,6 @@ url:"https://m1free.inwstream.com:1936/movie3/The_Shooter_1995/The_Shooter_1995_
 
  
 {  
-name:"เทเน็ท (2020)",
-image:"https://img.inwiptv.net/postor/20201205201020s5jxwhLPGI4Xow8GXwenzL1MkwF.jpg",
-url:"https://m1free.inwstream.com:1936/movie3/Tenet_2020/Tenet_2020_th_1080p_FW.mp4/chunk.m3u8",
-"referer": "https://www.123-hd.com/",
-"userAgent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.140 Maxthon/5.2.7.3000",
-"playInNatPlayer": "true"
-},
-
-
-
-
-
-
-
-
-
- 
-{  
 name:"กัปตัน อเมริกา: ศึกฮีโร่จักรวาลใหม่ (2025)",
 image:"https://img.inwiptv.net/postor/20250213191228mZUTBHzb0DXgrISwM28OjqGlFYa.jpg",
 url:"https://m1free.inwstream.com:1936/movie4/Captain_America_Brave_New_World_2025/Captain_America_Brave_New_World_2025_thr_v1.mp4/chunk.m3u8",
@@ -128,6 +110,27 @@ url:"https://m1free.inwstream.com:1936/movie4/Captain_America_Brave_New_World_20
 "userAgent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.140 Maxthon/5.2.7.3000",
 "playInNatPlayer": "true"
 },
+
+
+
+
+
+
+
+{  
+name:"กัปตัน อเมริกา: ศึกฮีโร่จักรวาลใหม่ (2025) V2",
+image:"https://img.inwiptv.net/postor/20250213191228mZUTBHzb0DXgrISwM28OjqGlFYa.jpg",
+url:"https://m1free.inwstream.com:1936/movie4/Captain_America_Brave_New_World_2025/Captain_America_Brave_New_World_2025_thr_v2.mp4/chunk.m3u8",
+"referer": "https://www.123-hd.com/",
+"userAgent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.140 Maxthon/5.2.7.3000",
+"playInNatPlayer": "true"
+},
+
+
+
+
+
+ 
 
 
 
