--- a/Nexter Moviees.html
+++ b/Nexter Moviees.html
@@ -2,7 +2,7 @@
 "name": "Movie<โรงหนังของแล้ม>",
 "image": "https://raw.githubusercontent.com/Tonnexter/Tonnexter/refs/heads/KhunKamMee/Picture/KM-LOGO/3.png",
 "url": "https://github.com/Tonnexter/Tonnexter/edit/KhunKamMee/Nexter%20Moviees.html", 
-"author": "[<อัพเดท:18.02.2568:10.00>]",
+"author": "[<อัพเดท:19.02.2568:10.00>]",
 "info": "โรงหนังของแล้ม",
 "stations" : [
 
@@ -19,6 +19,24 @@ url:"https://m1free.inwstream.com:1936/movie3/A_Dangerous_Man_2009/A_Dangerous_M
 "playInNatPlayer": "true"
 },
 
+
+
+
+
+
+
+
+
+
+
+ {  
+name:" พลิกนรก (2008)",
+image:"https://img.inwiptv.net/postor/20201026190409killshot-53d0c43fe5908.jpg",
+url:"https://m1free.inwstream.com:1936/movie3/Killshot_2008/Killshot_2008_TH_1080p.mp4/chunk.m3u8",
+"referer": "https://www.123-hd.com/",
+"userAgent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.140 Maxthon/5.2.7.3000",
+"playInNatPlayer": "true"
+},
 
 
 
