--- a/Nexter Moviees.html
+++ b/Nexter Moviees.html
@@ -148,6 +148,23 @@ url:"https://m1free.inwstream.com:1936/movie4/Captain_America_Brave_New_World_20
 
 
 
+
+
+
+
+ {  
+name:"กัปตัน อเมริกา: ศึกฮีโร่จักรวาลใหม่ (2025) V3",
+image:"https://img.inwiptv.net/postor/20250213191228mZUTBHzb0DXgrISwM28OjqGlFYa.jpg",
+url:"https://m1free.inwstream.com:1936/movie4/Captain_America_Brave_New_World_2025/Captain_America_Brave_New_World_2025_thr_v3.mp4/chunk.m3u8",
+"referer": "https://www.123-hd.com/",
+"userAgent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.140 Maxthon/5.2.7.3000",
+"playInNatPlayer": "true"
+},
+
+
+
+
+
  
 
 
