--- a/Nexter Moviees.html
+++ b/Nexter Moviees.html
@@ -2,7 +2,7 @@
 "name": "Movie<โรงหนังของแล้ม>",
 "image": "https://raw.githubusercontent.com/Tonnexter/Tonnexter/refs/heads/KhunKamMee/Picture/KM-LOGO/3.png",
 "url": "https://github.com/Tonnexter/Tonnexter/edit/KhunKamMee/Nexter%20Moviees.html", 
-"author": "[<อัพเดท:19.02.2568:10.00>]",
+"author": "[<อัพเดท:20.02.2568:10.00>]",
 "info": "โรงหนังของแล้ม",
 "stations" : [
 
@@ -10,6 +10,96 @@
 
 
 
+{  
+name:" เขย่าเกมเดือด (2006)",
+image:"https://img.inwiptv.net/postor/20200928182346l_1a054356-ae3a-4c97-99e8-c550f6bd3658.jpg",
+url:"https://m1free.inwstream.com:1936/movie3/End_Game_2006/End_Game_2006_TH_1080p.mp4/chunk.m3u8",
+"referer": "https://www.123-hd.com/",
+"userAgent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.140 Maxthon/5.2.7.3000",
+"playInNatPlayer": "true"
+},
+
+
+
+
+
+
+
+
+
+ 
+{  
+name:" เขย่าเกมเดือด (2006)",
+image:"https://img.inwiptv.net/postor/20200928182346l_1a054356-ae3a-4c97-99e8-c550f6bd3658.jpg",
+url:"https://m1free.inwstream.com:1936/movie3/End_Game_2006/End_Game_2006_TH_1080p.mp4/chunk.m3u8",
+"referer": "https://www.123-hd.com/",
+"userAgent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.140 Maxthon/5.2.7.3000",
+"playInNatPlayer": "true"
+},
+
+
+
+
+
+
+
+
+
+ 
+{  
+name:"อีสาวนักล่า (1996)",
+image:"https://img.inwiptv.net/postor/20200923131653barb-wire-5219760887296.jpg",
+url:"https://m1free.inwstream.com:1936/movie3/Barb_Wire_1996/Barb_Wire_1996_TH_1080p.mp4/chunk.m3u8",
+"referer": "https://www.123-hd.com/",
+"userAgent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.140 Maxthon/5.2.7.3000",
+"playInNatPlayer": "true"
+},
+
+
+
+
+
+
+
+
+
+ 
+{  
+name:"Line of Duty (2019)",
+image:"https://img.inwiptv.net/postor/20200918162029emE0M3FgWpySNSNRR87tGVubEVW.jpg",
+url:"https://m1free.inwstream.com:1936/movie3/Line_of_Duty_2019/Line_of_Duty_2019_th_1080p_HDTV.mp4/chunk.m3u8",
+"referer": "https://www.123-hd.com/",
+"userAgent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.140 Maxthon/5.2.7.3000",
+"playInNatPlayer": "true"
+},
+
+
+
+
+
+
+
+
+
+ 
+{  
+name:"คนโคตรระห่ำ (2012)",
+image:"https://img.inwiptv.net/postor/20200913185132stolen-522317e79c4ce.jpg",
+url:"https://m1free.inwstream.com:1936/movie3/Stolen_2012/Stolen_2012_TH_1080p.mp4/chunk.m3u8",
+"referer": "https://www.123-hd.com/",
+"userAgent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.140 Maxthon/5.2.7.3000",
+"playInNatPlayer": "true"
+},
+
+
+
+
+
+
+
+
+
+ 
 {  
 name:"มหาประลัยคนอันตราย (2009)",
 image:"https://img.inwiptv.net/postor/20201111095144a-dangerous-man-5cb4e57cc36f8.jpg",
