--- a/Nexter Moviees.html
+++ b/Nexter Moviees.html
@@ -2,7 +2,7 @@
 "name": "Movie<โรงหนังของแล้ม>",
 "image": "https://raw.githubusercontent.com/Tonnexter/Tonnexter/refs/heads/KhunKamMee/Picture/KM-LOGO/3.png",
 "url": "https://github.com/Tonnexter/Tonnexter/edit/KhunKamMee/Nexter%20Moviees.html", 
-"author": "[<อัพเดท:20.02.2568:10.00>]",
+"author": "[<อัพเดท:21.02.2568:10.00>]",
 "info": "โรงหนังของแล้ม",
 "stations" : [
 
@@ -11,9 +11,63 @@
 
 
 {  
-name:" เขย่าเกมเดือด (2006)",
-image:"https://img.inwiptv.net/postor/20200928182346l_1a054356-ae3a-4c97-99e8-c550f6bd3658.jpg",
-url:"https://m1free.inwstream.com:1936/movie3/End_Game_2006/End_Game_2006_TH_1080p.mp4/chunk.m3u8",
+name:"The Gorge (2025) บรรยายไทย",
+image:"https://img.inwiptv.net/postor/20250215071827236328.jpg",
+url:"https://m1free.inwstream.com:1936/movie4/The_Gorge_2025/The_Gorge_2025_EN_1080p.mp4/chunk.m3u8",
+"referer": "https://www.123-hd.com/",
+"userAgent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.140 Maxthon/5.2.7.3000",
+"playInNatPlayer": "true"
+},
+
+
+
+
+
+
+
+
+
+ 
+{  
+name:"คิลเลอร์แมน (2019)",
+image:"https://img.inwiptv.net/postor/20200821123213killerman-5df3579b08f07.jpg",
+url:"https://m1free.inwstream.com:1936/movie3/Killerman_2019/Killerman_2019_TH_1080p.mp4/chunk.m3u8",
+"referer": "https://www.123-hd.com/",
+"userAgent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.140 Maxthon/5.2.7.3000",
+"playInNatPlayer": "true"
+},
+
+
+
+
+
+
+
+
+
+ 
+{  
+name:"โปรเจคท์ พาวเวอร์ พลังลับพลังฮีโร่ (2020)",
+image:"https://img.inwiptv.net/postor/20200814174141images.jpg",
+url:"https://m1free.inwstream.com:1936/movie3/Project_Power_2020/Project_Power_2020_TH_1080p_NF.mp4/chunk.m3u8",
+"referer": "https://www.123-hd.com/",
+"userAgent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.140 Maxthon/5.2.7.3000",
+"playInNatPlayer": "true"
+},
+
+
+
+
+
+
+
+
+
+ 
+{  
+name:"ผ่าขุมทรัพย์ทะเลโหด (1995)",
+image:"https://img.inwiptv.net/postor/20200811135220cutthroat-island-532c90a4a8d66.jpg",
+url:"https://m1free.inwstream.com:1936/movie3/Cutthroat_Island_1995/Cutthroat_Island_1995_TH_1080p.mp4/chunk.m3u8",
 "referer": "https://www.123-hd.com/",
 "userAgent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.140 Maxthon/5.2.7.3000",
 "playInNatPlayer": "true"
@@ -365,7 +419,7 @@ url:"https://hot.24playerhd.com/ioshls/64480322d73440008a02f962f6fb4957/64480322
 
 {  
 name:"Venom The Last Dance เวน่อม มหาศึกอสูรอหังการ (2024)",
-image:"https://fwiptv.tv/images/movie/Venom_The_Last_Dance.webp",
+image:"https://img.inwiptv.net/postor/20241025120653aosm8NMQ3UyoBVpSxyimorCQykC.jpg",
 url:"https://m1free.inwstream.com:1936/movie4/Venom_The_Last_Dance_2024/Venom_The_Last_Dance_2024_thr_v1.mp4/chunk.m3u8",
 "referer": "https://www.123-hd.com/",
 "userAgent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.140 Maxthon/5.2.7.3000",
