--- a/Nexter-All-ChanNEL.html
+++ b/Nexter-All-ChanNEL.html
@@ -92,6 +92,37 @@
 
 
 
+{
+"name": "Nexter-RED STAR",
+"image": "https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcT2i-emdJtfwcYDc25ZrqOrtvQGIIzE284MDw&s",
+"url": "https://pastebin.com/raw/CMyG5dd3",
+"info": "Nexter-RED STAR",
+"import": false
+ },
+
+
+
+
+{
+"name": "Nexter-Doo Tube",
+"image": "https://i.imgur.com/NeZsNcV.gif",
+"url": "https://pastebin.com/raw/sjNAs0BW",
+"info": "Nexter-Doo Tube",
+"import": false
+ },
+
+
+
+
+{
+"name": "Nexter-KaoTomMud",
+"image": "https://i.postimg.cc/cL62jPgC/image.jpg",
+"url": "https://pastebin.com/raw/PLvSpZ1i",
+"info": "Nexter-Doo Tube",
+"import": false
+ },
+
+
 
 
 
