--- a/Nexter Moviees.html
+++ b/Nexter Moviees.html
@@ -11,6 +11,24 @@
 
 
 {  
+name:"ทุบนรกคุกมหาประลัย (2002)",
+image:"https://img.inwiptv.net/postor/20200804074335half-past-dead-54efc4289a0db.jpg",
+url:"https://m1free.inwstream.com:1936/movie3/Half_Past_Dead_2002/Half_Past_Dead_2002_TH_1080p.mp4/chunk.m3u8",
+"referer": "https://www.123-hd.com/",
+"userAgent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.140 Maxthon/5.2.7.3000",
+"playInNatPlayer": "true"
+},
+
+
+
+
+
+
+
+
+
+ 
+{  
 name:"The Gorge (2025) บรรยายไทย",
 image:"https://img.inwiptv.net/postor/20250215071827236328.jpg",
 url:"https://m1free.inwstream.com:1936/movie4/The_Gorge_2025/The_Gorge_2025_EN_1080p.mp4/chunk.m3u8",
