--- a/Nexter Moviees.html
+++ b/Nexter Moviees.html
@@ -2,7 +2,7 @@
 "name": "Movie<โรงหนังของแล้ม>",
 "image": "https://raw.githubusercontent.com/Tonnexter/Tonnexter/refs/heads/KhunKamMee/Picture/KM-LOGO/3.png",
 "url": "https://github.com/Tonnexter/Tonnexter/edit/KhunKamMee/Nexter%20Moviees.html", 
-"author": "[<อัพเดท:23.02.2568:10.00>]",
+"author": "[<อัพเดท:25.02.2568:10.00>]",
 "info": "โรงหนังของแล้ม",
 "stations" : [
 
@@ -11,9 +11,61 @@
 
 
 {  
-name:"ปฏิบัติการสวยลับ (2022)",
-image:"https://img.inwiptv.net/postor/20220419110938355-5f7d7edd100c5.jpg",
-url:"https://m1free.inwstream.com:1936/movie4/The_355_2022/The_355_2022_th_1080_upscale_AI.mp4/chunk.m3u8",
+name:" เกมทดสอบชีวิต (2024)",
+image:"https://img.inwiptv.net/postor/202502240157157Fsu6TmpagdSOXVsIFONLpY5sBQ.jpg",
+url:"https://m1free.inwstream.com:1936/movie4/The_Death_Game_2024/The_Death_Game_2024_th_1080.mp4/chunk.m3u8",
+"referer": "https://www.123-hd.com/",
+"userAgent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.140 Maxthon/5.2.7.3000",
+"playInNatPlayer": "true"
+},
+
+
+
+
+
+
+
+
+
+ 
+{  
+name:"เกมพร้อมตาย (2019)",
+image:"https://img.inwiptv.net/postor/20191130110849165165.jpg",
+url:"https://m1free.inwstream.com:1936/movie3/Ready_or_Not_2019/Ready_or_Not_2019_th_1080p_FW.mp4/chunk.m3u8",
+"referer": "https://www.123-hd.com/",
+"userAgent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.140 Maxthon/5.2.7.3000",
+"playInNatPlayer": "true"
+},
+
+
+
+
+
+
+
+ 
+{  
+name:"VFW (2019)",
+image:"https://img.inwiptv.net/postor/20200419184917vfw-5e7b0dbac78fc.jpg",
+url:"https://m1free.inwstream.com:1936/movie3/VFW_2019/VFW_2019_th_1080p_FW.mp4/chunk.m3u8",
+"referer": "https://www.123-hd.com/",
+"userAgent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.140 Maxthon/5.2.7.3000",
+"playInNatPlayer": "true"
+},
+
+
+
+
+
+
+
+
+
+ 
+{  
+name:"22 นัด ยมบาลล้างยมบาล (2010)",
+image:"https://img.inwiptv.net/postor/2020080119530122-bullets-53e731ec3a329.jpg",
+url:"https://m1free.inwstream.com:1936/movie3/22_Bullets_2010/22_Bullets_2010_TH_1080p.mp4/chunk.m3u8",
 "referer": "https://www.123-hd.com/",
 "userAgent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.140 Maxthon/5.2.7.3000",
 "playInNatPlayer": "true"
