--- a/Nexter Moviees.html
+++ b/Nexter Moviees.html
@@ -2,7 +2,7 @@
 "name": "Movie<โรงหนังของแล้ม>",
 "image": "https://raw.githubusercontent.com/Tonnexter/Tonnexter/refs/heads/KhunKamMee/Picture/KM-LOGO/3.png",
 "url": "https://github.com/Tonnexter/Tonnexter/edit/KhunKamMee/Nexter%20Moviees.html", 
-"author": "[<อัพเดท:25.02.2568:10.00>]",
+"author": "[<อัพเดท:26.02.2568:10.00>]",
 "info": "โรงหนังของแล้ม",
 "stations" : [
 
@@ -11,7 +11,25 @@
 
 
 {  
-name:" เกมทดสอบชีวิต (2024)",
+name:"ดิ โอลด์ การ์ด (2020)",
+image:"https://img.inwiptv.net/postor/20200710181144p18322832_v_v8_aa.jpg",
+url:"https://m1free.inwstream.com:1936/movie3/The_Old_Guard_2020/The_Old_Guard_2020_TH_1080p.mp4/chunk.m3u8",
+"referer": "https://www.123-hd.com/",
+"userAgent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.140 Maxthon/5.2.7.3000",
+"playInNatPlayer": "true"
+},
+
+
+
+
+
+
+
+
+
+ 
+{  
+name:"เกมทดสอบชีวิต (2024)",
 image:"https://img.inwiptv.net/postor/202502240157157Fsu6TmpagdSOXVsIFONLpY5sBQ.jpg",
 url:"https://m1free.inwstream.com:1936/movie4/The_Death_Game_2024/The_Death_Game_2024_th_1080.mp4/chunk.m3u8",
 "referer": "https://www.123-hd.com/",
