--- a/Nexter Moviees.html
+++ b/Nexter Moviees.html
@@ -11,6 +11,24 @@
 
 
 {  
+name:"ศึกรวมพลังคนเหนือมนุษย์ (2009)",
+image:"https://img.inwiptv.net/postor/20250305040624qDI6PbIjeEdLUoPHGaZqDMV9Fdx.jpg",
+url:"https://m1free.inwstream.com:1936/movie4/The_King_of_Fighters_2009/The_King_of_Fighters_2009_th_1080.mp4/chunk.m3u8",
+"referer": "https://www.123-hd.com/",
+"userAgent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.140 Maxthon/5.2.7.3000",
+"playInNatPlayer": "true"
+},
+
+
+
+
+
+
+
+
+
+ 
+{  
 name:"คนเดือด​ ซัดนรก (2024)",
 image:"https://img.inwiptv.net/postor/20241207031143uTKfD1CdjCLMVITnzblaqVSTxma.jpg",
 url:"https://m1free.inwstream.com:1936/movie4/Striking_Rescue_2024/Striking_Rescue_2024_th_1080.mp4/chunk.m3u8",
