--- a/Nexter Moviees.html
+++ b/Nexter Moviees.html
@@ -2,7 +2,7 @@
 "name": "Movie<โรงหนังของแล้ม>",
 "image": "https://raw.githubusercontent.com/Tonnexter/Tonnexter/refs/heads/KhunKamMee/Picture/KM-LOGO/3.png",
 "url": "https://github.com/Tonnexter/Tonnexter/edit/KhunKamMee/Nexter%20Moviees.html", 
-"author": "[<อัพเดท:03.03.2568:10.00>]",
+"author": "[<อัพเดท:04.03.2568:10.00>]",
 "info": "โรงหนังของแล้ม",
 "stations" : [
 
@@ -11,9 +11,9 @@
 
 
 {  
-name:"ศึกรวมพลังคนเหนือมนุษย์ (2009)",
-image:"https://img.inwiptv.net/postor/20250305040624qDI6PbIjeEdLUoPHGaZqDMV9Fdx.jpg",
-url:"https://m1free.inwstream.com:1936/movie4/The_King_of_Fighters_2009/The_King_of_Fighters_2009_th_1080.mp4/chunk.m3u8",
+name:"คอรัปเตอร์ ฅนคอรัปชั่น (1999)",
+image:"https://img.inwiptv.net/postor/20200705102705p22642_v_v8_ab.jpg",
+url:"https://m1free.inwstream.com:1936/movie3/The_Corruptor_1999/The_Corruptor_1999_TH_1080p.mp4/chunk.m3u8",
 "referer": "https://www.123-hd.com/",
 "userAgent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.140 Maxthon/5.2.7.3000",
 "playInNatPlayer": "true"
