--- a/Nexter Moviees.html
+++ b/Nexter Moviees.html
@@ -2,7 +2,7 @@
 "name": "Movie<โรงหนังของแล้ม>",
 "image": "https://raw.githubusercontent.com/Tonnexter/Tonnexter/refs/heads/KhunKamMee/Picture/KM-LOGO/3.png",
 "url": "https://github.com/Tonnexter/Tonnexter/edit/KhunKamMee/Nexter%20Moviees.html", 
-"author": "[<อัพเดท:04.03.2568:10.00>]",
+"author": "[<อัพเดท:05.03.2568:10.00>]",
 "info": "โรงหนังของแล้ม",
 "stations" : [
 
@@ -10,6 +10,24 @@
 
 
 
+{  
+name:"มาสเตอร์เชฟ เดอะ โพรเฟสชันนัลส์ ประเทศไทย | Ep.1",
+image:"https://s1.dmcdn.net/v/XsYNW1dhSn9MtKSXs/x240",
+url:"https://www.dailymotion.com/video/x9e50ww",
+"referer": "https://www.123-hd.com/",
+"userAgent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.140 Maxthon/5.2.7.3000",
+"playInNatPlayer": "true"
+},
+
+
+
+
+
+
+
+
+
+ 
 {  
 name:"คอรัปเตอร์ ฅนคอรัปชั่น (1999)",
 image:"https://img.inwiptv.net/postor/20200705102705p22642_v_v8_ab.jpg",
